# bru-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
bru_agent/: __init__.py  cli.py  default_config.yaml  main.py
bru_agent/api/: __init__.py  server.py
bru_agent/channels/: __init__.py  base.py  manager.py  router.py  telegram.py
bru_agent/core/: __init__.py  agent.py  credentials.py  ledger.py  state.py
bru_agent/mail_client/: __init__.py  client.py
bru_agent/matsya/: __init__.py  client.py
bru_agent/skills/: __init__.py  base.py  registry.py
bru_agent/skills/implementations/: browser_base.py  email_sender.py  excel_generator.py  file_operations.py  media_tools.py  pdf_generator.py  shell_command.py  ssh_operations.py  web_search.py
bru_agent/world/: __init__.py  observer.py  state.py  user_model.py
docs/: action_ledger_paper.md  integration.md  lntl_spec.md  taxonomy.md
examples/: 01_standalone_task.py  02_custom_skill.py  03_action_ledger_demo.py  04_email_channel.py  05_lntl_encoding.py  06_view_ledger.py  README.md
